<resources>
    <string name="app_name">Imdb+</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="popular_people">Popular People</string>
    <string name="login">LOGIN</string>
    <string name="log_out">Log Out</string>
    <string name="watchlist">Watchlist</string>
</resources>
