<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movies"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_tvShows"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/tv_shows" />
        <item
            android:id="@+id/nav_actors"
            android:icon="@drawable/ic_popular_people"
            android:title="@string/popular_people" />
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_watchlist"
            android:title="@string/watchlist" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_login"
            android:title="@string/log_out" />

    </group>

</menu>
