<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_movies">

    <fragment
        android:id="@+id/nav_movies"
        android:name="com.marius.personalimdb.ui.movies.MoviesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/nav_tvShows"
        android:name="com.marius.personalimdb.ui.tvShows.TvShowsFragment"
        android:label="@string/tv_shows"
        tools:layout="@layout/fragment_tv_shows" />
    <fragment
        android:id="@+id/nav_actors"
        android:name="com.marius.personalimdb.ui.actors.ActorsFragment"
        android:label="@string/popular_people"
        tools:layout="@layout/fragment_actors" />

    <fragment
        android:id="@+id/nav_watchlist"
        android:name="com.marius.personalimdb.ui.watchlist.WatchlistFragment"
        android:label="@string/watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.marius.personalimdb.ui.logout.LogOutFragment"
        android:label="@string/log_out" />


</navigation>